--- a/resume/other details.html
+++ b/resume/other details.html
@@ -3,13 +3,19 @@
 	<H1>PERSONAL DETAILS</H1>	
 	<OL>
 		<LI>FAMILY DETAILS</LI>
-			<ul> father's name: Premarajan</ul>
-			<ul> mother's name: Chandrika</ul>
+			<ul> 
+				<li>father's name: Premarajan</li>
+				<li> mother's name: Chandrika</li>
+			</ul>
 		<LI>HOBBIES</LI>
-			<ul> : football</ul>
-			<ul> : Music</ul>
+			<ul> 
+				<li>football</<li>
+				 <li> Music</li>
+			</ul>
 		<LI>FAVOURITE MOVIES</LI>
-			<ul> : Interstellar</ul>	
+			<ul> 
+				<li>Interstellar</li>
+			</ul>	
 	</OL>
 	<input type="checkbox"><b>I ACCEPT</input><br><br>
 
